# WibergianSFM

./: .gitignore  Readme  sensor_width_camera_database_nd.txt  sfm_class.py
Castle/results/: openMVG_gt.json
Castle/results/matches/: 100_7100.desc  100_7100.feat  100_7101.desc  100_7101.feat  100_7102.desc  100_7102.feat  100_7103.desc  100_7103.feat  100_7104.desc  100_7104.feat  100_7105.desc  100_7105.feat  100_7106.desc  100_7106.feat  100_7107.desc  100_7107.feat  100_7108.desc  100_7108.feat  100_7109.desc  100_7109.feat  100_7110.desc  100_7110.feat  sfm_data.json
Castle/results/tempMVG/: Reconstruction_Report.html  SfMReconstruction_Report.html  cameraPath_translation_averaging.ply  global_relative_rotation_pose_graph_final  global_relative_rotation_view_graph  initial_structure.ply  structure_00_refine_T_Xi.ply  structure_04_outlier_removed.ply
pycode/: debg.py  sfm_class.py
pycode/dataset/statue/: c_gt.npy  cameras.txt  cloud_and_poses.ply  gt.npy  p_gt.npy
pycode/dataset/statue/globalrec/: Reconstruction_Report.html  SfMReconstruction_Report.html  cameraPath_translation_averaging.ply  global_relative_rotation_view_graph  initial_structure.ply  structure_00_refine_T_Xi.ply
pycode/dataset/statue/rec/: 0000.desc  0000.feat  0002.desc  0002.feat  (+239 more)
source_sfm/: CMakeLists.txt  Makefile  main.cpp  pyrun2.py  python_sfm.py  sfm.cpp  sfm.hpp  sfm.i
src/: CMakeLists.txt
src/openMVG/sfm/: #sfm_data_BA_ceres.cpp#  sfm_data_BA_ceres.cpp  sfm_data_BA_ceres.hpp  sfm_data_triangulation.cpp
src/software/SfM/: main_ComputeMatches.cpp  main_GlobalSfM.cpp
(+3 files in other folders)
